data for individual podcasts, and reduced right-padding inside podcast to avoid text wrap on hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,7 @@ footer {
 }
 
 .podcast {
-  padding: 12px;
+  padding: 10px 4px 10px 10px;
   display: flex;
   flex-direction: column;
   /* background-color: black; */
@@ -129,7 +129,7 @@ footer {
 .podcast-content {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
 }
 
 .podcast-content img {
